--- a/LabAssign01/LabAssignment01.html
+++ b/LabAssign01/LabAssignment01.html
@@ -39,18 +39,31 @@
 				//............................................
 				//Set Up Data Buffers
 				var zigzag1 = [
-                    -0.70,0.10,0.0,
-                    -0.56,-0.16,0.0,
-                    -0.42,0.10,0.0,
-                    -0.28,-0.16,0.0,
-                    -0.14,0.10,0.0,
-                    /* Middle Point - down */
-                    0.0,-0.16,0.0,
-                    0.14,0.10,0.0,
-                    0.28,-0.16,0.0,
-                    0.42,0.10,0.0,
-                    0.56,-0.16,0.0,                             
-                    0.70,0.10,0.0,                             
+					/* first zigzag */
+                    -0.65,  0.05, 0.0,
+                    -0.52, -0.22, 0.0,
+                    -0.39,  0.05, 0.0,
+                    -0.26, -0.22, 0.0,
+                    -0.13,  0.05, 0.0,
+                     0.0,  -0.22, 0.0,
+                     0.13,  0.05, 0.0,
+                     0.26, -0.22, 0.0,
+                     0.39,  0.05, 0.0,
+                     0.52, -0.22, 0.0,
+                     0.65,  0.05, 0.0,
+					 /* second zigzag */
+                    -0.65, -0.68, 0.0,
+                    -0.52, -0.95, 0.0,
+                    -0.39, -0.68, 0.0,
+                    -0.26, -0.95, 0.0,
+                    -0.13, -0.68, 0.0,
+                     0.0,  -0.95, 0.0,
+                     0.13, -0.68, 0.0,
+                     0.26, -0.95, 0.0,
+                     0.39, -0.68, 0.0,
+                     0.52, -0.95, 0.0,
+                     0.65, -0.68, 0.0,
+
                 ];
 
 				var aryVerts = new Float32Array(zigzag1),
@@ -71,7 +84,8 @@
 				gl.enableVertexAttribArray(aPositionLoc);					//Enable the position attribute in the shader
 				gl.vertexAttribPointer(aPositionLoc,3,gl.FLOAT,false,0,0);	//Set which buffer the attribute will pull its data from
 				gl.bindBuffer(gl.ARRAY_BUFFER,null);
-				this.gl.drawArrays(gl.LINE_STRIP, 0, 11);
+				this.gl.drawArrays(gl.LINE_STRIP,  0, 11);
+				this.gl.drawArrays(gl.LINE_STRIP, 11, 11);
 
 
 			});
