--- a/LabAssign01/LabAssignment01.html
+++ b/LabAssign01/LabAssignment01.html
@@ -51,7 +51,7 @@
                      0.39,  0.05, 0.0,
                      0.52, -0.22, 0.0,
                      0.65,  0.05, 0.0,
-					 /* second zigzag */
+					/* second zigzag */
                     -0.65, -0.68, 0.0,
                     -0.52, -0.95, 0.0,
                     -0.39, -0.68, 0.0,
@@ -63,7 +63,13 @@
                      0.39, -0.68, 0.0,
                      0.52, -0.95, 0.0,
                      0.65, -0.68, 0.0,
-
+					/* The hexagon */
+					-0.81,  0.92, 0.0,
+					-0.55,  0.92, 0.0,
+					-0.42,  0.63, 0.0,
+					-0.55,  0.34, 0.0,
+					-0.81,  0.34, 0.0,
+					-0.94,  0.63, 0.0,
                 ];
 
 				var aryVerts = new Float32Array(zigzag1),
@@ -86,6 +92,7 @@
 				gl.bindBuffer(gl.ARRAY_BUFFER,null);
 				this.gl.drawArrays(gl.LINE_STRIP,  0, 11);
 				this.gl.drawArrays(gl.LINE_STRIP, 11, 11);
+				this.gl.drawArrays(gl.LINE_LOOP, 22, 6);
 
 
 			});
